@@ -1,6 +1,9 @@
 Revision history for Data-SearchEngine-ElasticSearch
 
 {{$NEXT}}
+  * Automatically combine filters inside a parent and filter
+  * Automatically copy filters into facets so that facets match the overall
+    queries filters
 
 0.09 Nov 21 2011
   * Add an engine method (Stevan Little)
